force-app/main/default/objects/TeamMember__c/TeamMember__c.object-meta.xml
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>