force-app/main/default/objects/TeamMember__c/fields/Batting_AllRouder__c.field-meta.xml
<CustomField>
    <fullName>Batting_AllRouder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batting AllRouder</label>
    <type>Checkbox</type>
</CustomField>