force-app/main/default/objects/TeamMember__c/fields/Bowling_All_Rounder__c.field-meta.xml
<CustomField>
    <fullName>Bowling_All_Rounder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bowling All Rounder</label>
    <type>Checkbox</type>
</CustomField>