force-app/main/default/objects/TeamMember__c/fields/FastBowler__c.field-meta.xml
<CustomField>
    <fullName>FastBowler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FastBowler</label>
    <type>Checkbox</type>
</CustomField>