force-app/main/default/objects/TeamMember__c/fields/I_Agree__c.field-meta.xml
<CustomField>
    <fullName>I_Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BY CLICKING THE CHECK BOX, I HAVE AGREED FOLLOW THE  PATICIPATION RULES OF THE CRICKET COUNCIL OF ONTARIO TRIAL.</description>
    <inlineHelpText>BY CLICKING THE CHECK BOX, I HAVE AGREED FOLLOW THE  PATICIPATION RULES OF THE CRICKET COUNCIL OF ONTARIO TRIAL.</inlineHelpText>
    <label>I Agree</label>
    <type>Checkbox</type>
</CustomField>