force-app/main/default/objects/TeamMember__c/fields/Middle_Order__c.field-meta.xml
<CustomField>
    <fullName>Middle_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Middle Order</label>
    <type>Checkbox</type>
</CustomField>