force-app/main/default/objects/TeamMember__c/fields/Opening_Batsman__c.field-meta.xml
<CustomField>
    <fullName>Opening_Batsman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opening Batsman</label>
    <type>Checkbox</type>
</CustomField>