force-app/main/default/objects/TeamMember__c/fields/Select_Ctag__c.field-meta.xml
<CustomField>
    <fullName>Select_Ctag__c</fullName>
    <label>Select Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior U15</fullName>
            </value>
            <value>
                <fullName>Junior U16</fullName>
            </value>
            <value>
                <fullName>Junior U17</fullName>
            </value>
            <value>
                <fullName>Junior U18</fullName>
            </value>
            <value>
                <fullName>Senior U25</fullName>
            </value>
            <value>
                <fullName>Senoir</fullName>
            </value>
            <value>
                <fullName>Women&quot;s Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>