force-app/main/default/objects/TeamMember__c/fields/Spinner__c.field-meta.xml
<CustomField>
    <fullName>Spinner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spinner</label>
    <type>Checkbox</type>
</CustomField>