force-app/main/default/objects/TeamMember__c/fields/Wicket_Keeper__c.field-meta.xml
<CustomField>
    <fullName>Wicket_Keeper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wicket Keeper</label>
    <type>Checkbox</type>
</CustomField>